comparison of susie and mvsusie

--- a/workflow/mv_susie.ipynb
+++ b/workflow/mv_susie.ipynb
@@ -382,6 +382,8 @@
     "# SNPs to be included in the final analysis\n",
     "parameter: extract_snp = path\n",
     "\n",
+    "# Minor allele frequency that are used to filter X\n",
+    "parameter: MAF = 0.01\n",
     "\n",
     "\n",
     "\n",
@@ -599,7 +601,7 @@
     "    # Load X data\n",
     "    X_$[_regions[0]]_raw = read_plink(\"$[_input[1]:n]\")$bed\n",
     "    # Filter X by 0.1 NA and 0.01 MAF\n",
-    "    X_$[_regions[0]]_ftr = filter_X(X_$[_regions[0]]_raw,0.1,0.01)\n",
+    "    X_$[_regions[0]]_ftr = filter_X(X_$[_regions[0]]_raw,0.1,$[MAF])\n",
     "    X_$[_regions[0]] = impute_and_transform(X_$[_regions[0]]_ftr)\n",
     "    # Load Y data\n",
     "    Y_$[_regions[0]] = read_delim(\"$[_input[2]]\",delim = \"\\t\")\n",
@@ -676,7 +678,7 @@
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.cv.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '24h',  mem = '60G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -788,7 +790,7 @@
     "    \n",
     "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
     "    cv_df = cv_df%>%mutate(\n",
-    "    train_X = map(train_X,~filter_X(.x,0.1,0.01)),\n",
+    "    train_X = map(train_X,~filter_X(.x,0.1,$[MAF])),\n",
     "    test_X = map2(test_X,train_X,~.x%>%as_tibble()%>%select(colnames(.y))%>%as.matrix())\n",
     "    )\n",
     "    return(cv_df)\n",
@@ -848,6 +850,13 @@
     "        mvsusie(first,second, L=10, prior_variance = prior_covar,residual_variance = third,precompute_covariances = TRUE)\n",
     "        )))\n",
     "    }\n",
+    "  \n",
+    "    ## Shrinkage of weights\n",
+    "    \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
     "    # Extract data \n",
     "    \n",
     "    cv_df = cv_df%>%mutate(\n",
@@ -886,6 +895,33 @@
     "                    \n",
     "                    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
