--- a/workflow/uni_susie.ipynb
+++ b/workflow/uni_susie.ipynb
@@ -227,6 +227,11 @@
     "# Number of training & testing samples used\n",
     "parameter: cv_times = 2\n",
     "\n",
+    "# Minor allele frequency that are used to filter X\n",
+    "parameter: MAF = 0.01\n",
+    "\n",
+    "\n",
+    "\n",
     "# parameters for the susie pipelines.\n",
     "parameter: causal_variables_L = 10\n",
     "parameter: scaled_prior_variance = 0.1\n",
@@ -276,7 +281,7 @@
     "input: molecular_pheno, for_each = \"regions\"\n",
     "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
     "        f'{wd:a}/cache/{_input:bn}.{_regions[3]}.pheno'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    # Get the line number for the region in the file\n",
     "    line_num = system(\"awk '($$[region_name]==\\\"$[_regions[3]]\\\") {print NR}' $[_input]\", intern=T)\n",
@@ -324,7 +329,7 @@
     "parameter: extract_snp = f'{geno_file:an}.bim'\n",
     "parameter: exclude_snp = \"./.\"\n",
     "parameter: keep_sample = f'{_input[1]}'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    ##### Get the locus genotypes for $[_regions[3]]\n",
     "    plink --bfile $[geno_file:an] \\\n",
@@ -366,7 +371,7 @@
     "\n",
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"20G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container,volumes = [f'{wd:a}:{wd:a}']\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -459,18 +464,7 @@
     "        cat(opt$tmp,\" : heritability \",hsq[1],\"; LRT P-value \",hsq.pv,\" : skipping gene\\n\",sep='',file=stderr())\n",
     "        cleanup()\n",
     "        q()\n",
-    "    }\n",
-    "\n",
-    "    \n",
-    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/mv_susie.ipynb fusion_tf \\\n",
-    "--molecular_pheno_dir /mnt/mfs/statgen/neuro-twas/whole_genome_0504/molecular_phenotype_list \\\n",
-    "--region_list /mnt/mfs/statgen/neuro-twas/whole_genome_0504/wg_rds_list_final \\\n",
-    "--wd /mnt/mfs/statgen/neuro-twas/whole_genome_0504/ \\\n",
-    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" --impute TRUE --cv_times 2 &\n",
-    "\n",
-    "\n"
+    "    }"
    ]
   },
   {
@@ -505,7 +499,7 @@
     "\n",
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"60G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container,volumes = [f'{wd:a}:{wd:a}']\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -599,7 +593,7 @@
     "  \n",
     "    # Filter X by 0.1 NA and 0.01 MAF, and then transfrom X\n",
     "    \n",
-    "    X_ftr = filter_X(genos$bed,0.1,0.01)\n",
+    "    X_ftr = filter_X(genos$bed,0.1,$[MAF])\n",
     "    X = impute_and_transform(X_ftr,impute = FALSE)\n",
     "    \n",
     "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
@@ -654,15 +648,14 @@
    "source": [
     "# CV with univariate susie\n",
     "[susie_cv_4]\n",
-    "input: group_by = 3, group_with = 'regions'\n",
-    "output:  f'{wd:a}/susie/{_input[2]:bn}.cv.RData',\n",
-    "         f'{wd:a}/susie/{_input[2]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '8cG', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "input: group_by = 2, group_with = 'regions'\n",
+    "output:  f'{wd:a}/susie/{_input[0]:bn}.cv.RData',\n",
+    "         f'{wd:a}/susie/{_input[0]:bn}.cv_diag.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
-    "    library(\"plink2R\")\n",
     "    library(\"purrr\")\n",
     "    library(\"modelr\")\n",
     "    library(\"susieR\")\n",
@@ -753,15 +746,14 @@
     "    \n",
     "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
     "    cv_df = cv_df%>%mutate(\n",
-    "    train_X = map(train_X,~filter_X(.x,0.1,0.01)),\n",
+    "    train_X = map(train_X,~filter_X(.x,0.1,$[MAF])),\n",
     "    test_X = map2(test_X,train_X,~.x%>%as_tibble()%>%select(colnames(.y))%>%as.matrix())\n",
     "    )\n",
     "    return(cv_df)\n",
     "    }\n",
     "    \n",
     "    # Load Data\n",
-    "    full_model = attach('$[_input[2]]')\n",
-    "    full_model = full_model$fitted1\n",
+    "    full_model = attach('$[_input[0]]')$full_model\n",
     "    X = full_model$X\n",
     "    Y = full_model$Y%>%as.tibble()\n",
     "\n",
@@ -833,7 +825,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "#Saved selected susie object into one RData\n",
@@ -875,7 +869,7 @@
     "input: group_by = \"all\"\n",
     "output:f'{wd:a}/susie/all_hsq.txt',\n",
     "       f'{wd:a}/susie.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\"\n",
     "  head -1 $[_input[0]] > $[_output[0]]\n",
     "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output[0]]\n",
@@ -912,7 +906,7 @@
     "input: group_by = \"all\"\n",
     "output:f'{wd:a}/susie/all_hsq.txt',\n",
     "       f'{wd:a}/susie_cv.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\"\n",
     "\n",
     "  head -1 $[_input[0]:nnn].hsq > $[_output[0]]\n",
@@ -969,7 +963,7 @@
      "sos"
     ]
    ],
-   "version": "0.22.3"
+   "version": "0.20.1"
   }
  },
  "nbformat": 4,
