--- a/workflow/mixture_prior.ipynb
+++ b/workflow/mixture_prior.ipynb
@@ -499,6 +499,7 @@
     "parameter: remove_label = False\n",
     "input: model_data\n",
     "output: f'{cwd:a}/{_input:bn}{(\"_\" + name.replace(\"$\", \"_\")) if name != \"\" else \"\"}.pdf'\n",
+    "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '10G', cores = 4, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout',container = container\n",
     "    plot_sharing = function(X, to_cor=FALSE, title=\"\", remove_names=F) {\n",
     "        clrs <- colorRampPalette(rev(c(\"#D73027\",\"#FC8D59\",\"#FEE090\",\"#FFFFBF\",\n",
@@ -576,7 +577,7 @@
      "sos"
     ]
    ],
-   "version": "0.22.3"
+   "version": "0.20.1"
   }
  },
  "nbformat": 4,
