--- a/apex/Apex_prototyping.ipynb
+++ b/apex/Apex_prototyping.ipynb
@@ -135,6 +135,16 @@
     "# Prefix for the analysis output\n",
     "parameter: Prefix = \"\"\n",
     "\n",
+    "## Parameter to be used (TBD)\n",
+    "# Number of latent common factors\n",
+    "parameter: n_of_factor = 5\n",
+    "# Number of factor analysis iterations (0 for PCA).                                         \n",
+    "parameter: iteration = 0\n",
+    "# Factor analysis prior\n",
+    "parameter: p = 0.05\n",
+    "parameter: tau = 0.05\n",
+    "\n",
+    "\n",
     "# Get a list of all regions\n",
     "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip() and not x.strip().startswith('#')]\n",
     "# Get a list of all chrs\n",
@@ -197,16 +207,10 @@
     "[cis_qtl_1, Factor_Analysis]\n",
     "output: f'{wd:a}/cache/factor/{_input:bn}.bed'\n",
     "\n",
-    "# Number of latent common factors\n",
-    "parameter: n_of_factor = 5\n",
-    "# Number of factor analysis iterations (0 for PCA).                                         \n",
-    "parameter: iteration = 0\n",
-    "# Factor analysis prior\n",
-    "parameter: p = 0.05\n",
-    "parameter: tau = 0.05\n",
+    "\n",
     "# Parameter for running\n",
     "parameter: thread = 3\n",
-    "        \n",
+    "\n",
     "        \n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
@@ -266,7 +270,7 @@
    },
    "source": [
     "## QTL Sumstat generation  \n",
-    "This step generate the cis-QTL summary statistics and vcov (covariate-adjusted LD) files for downstream analysis from summary statistics."
+    "This step generate the cis-QTL summary statistics and vcov (covariate-adjusted LD) files for downstream analysis from summary statistics. The analysis is done per chromosome to reduce running time."
    ]
   },
   {
@@ -283,16 +287,18 @@
     "parameter: window = '[100000]'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    cd $[wd]/cache/\n",
-    "    mkdir lmm\n",
-    "    cd lmm\n",
+    "    mkdir cis_sumstat\n",
+    "    cd cis_sumstat\n",
     "    Apex cis --vcf $[genotype:an] \\\n",
     "    --bed $[_input] \\\n",
     "    --cov $[cov] \\\n",
     "    --out $[Prefix] \\\n",
     "    --threads $[threads] \\\n",
+    "    --chr $[_chrm]\\\n",
     "    --fit-null \\\n",
     "    --save-resid \\\n",
     "    --write-gvar \\\n",
+    "    --theta-file  $[_input]\\\n",
     "    --window=$[window]"
    ]
   },
@@ -303,7 +309,8 @@
    },
    "source": [
     "## Conducting meta analysis for multi-variant(TBD) \n",
-    "Taking the input from "
+    "\n",
+    "\n"
    ]
   },
   {
