--- a/analysis/rosmap_data_description.ipynb
+++ b/analysis/rosmap_data_description.ipynb
@@ -237,6 +237,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "kernel": "SoS"
@@ -327,7 +336,7 @@
      "sos"
     ]
    ],
-   "version": "0.22.3"
+   "version": "0.20.1"
   }
  },
  "nbformat": 4,
