--- a/apex/Apex_prototyping.ipynb
+++ b/apex/Apex_prototyping.ipynb
@@ -64,7 +64,17 @@
     "kernel": "SoS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/apex/Apex_prototyping.ipynb apex_cis \\\n",
+    "  --molecular_pheno_whole  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-apex/pipeline_testing/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /mnt/mfs/statgen/neuro-apex/test_region \\\n",
+    "  --iteration 2 \\\n",
+    "  --container \"\" \\\n",
+    "  --job_size 1 \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,11 +127,11 @@
    "source": [
     "[global]\n",
     "# Path to the input molecular phenotype data.\n",
-    "parameter: molecular_pheno = path\n",
+    "parameter: molecular_pheno_whole = path\n",
     "# Covariate file, in similar format as the molecular_pheno\n",
-    "parameter: cov = path\n",
-    "# Genotype file in vcf/vcf.gz/bcf format\n",
-    "parameter: genotype = path\n",
+    "parameter: ori_covariate = \"\"\n",
+    "# List of Genotype file in plink trio format\n",
+    "parameter: genotype_list = path\n",
     "# An index text file with 4 columns specifying the chr, start, end and names of regions to analyze\n",
     "parameter: region_list = path\n",
     "# Path to the work directory of the weight computation: output weights and cache will be saved to this directory.\n",
@@ -131,11 +141,13 @@
     "# Specify the number of jobs per run.\n",
     "parameter: job_size = 2\n",
     "# Container option for software to run the analysis: docker or singularity\n",
-    "parameter: container = 'gaow/twas'\n",
+    "parameter: container = ''\n",
     "# Prefix for the analysis output\n",
-    "parameter: Prefix = \"\"\n",
+    "parameter: Prefix = 'test'\n",
+    "# Path to the vcf file that act as a place holder\n",
+    "parameter: place_holder_vcf = path(\"/mnt/mfs/statgen/neuro-apex/mwe/data/ROSMAP_chr2.vcf.gz\")\n",
     "\n",
-    "## Parameter to be used (TBD)\n",
+    "## Parameter to be used (TB\n",
     "# Number of latent common factors\n",
     "parameter: n_of_factor = 5\n",
     "# Number of factor analysis iterations (0 for PCA).                                         \n",
@@ -145,45 +157,101 @@
     "parameter: tau = 0.05\n",
     "\n",
     "\n",
-    "# Get a list of all regions\n",
+    "# Specify the scanning window for the up and downstream radius to analyze around the region of interest, in units of Kb\n",
+    "parameter: window = 100000\n",
+    "\n",
+    "\n",
+    "# Get regions of interest to focus on.\n",
     "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip() and not x.strip().startswith('#')]\n",
-    "# Get a list of all chrs\n",
-    "chrm = set(regions[0])\n",
-    "chrm = list(chrm)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "source": [
-    "## Fitered for the genes that are to be analyzed"
+    "\n",
+    "geno_inventory = dict([x.strip().split() for x in open(genotype_list).readlines() if x.strip() and not x.strip().startswith('#')])\n",
+    "\n",
+    "import os\n",
+    "def get_genotype_file(chrom, genotype_list, geno_inventory):\n",
+    "    chrom = f'{chrom}'\n",
+    "    if chrom.startswith('chr'):\n",
+    "        chrom = chrom[3:]\n",
+    "    if chrom not in geno_inventory:\n",
+    "        geno_file = f'{chrom}'\n",
+    "    else:\n",
+    "        geno_file = geno_inventory[chrom]\n",
+    "    if not os.path.isfile(geno_file):\n",
+    "        # relative path\n",
+    "        if not os.path.isfile(f'{genotype_list:ad}/' + geno_file):\n",
+    "            raise ValueError(f\"Cannot find genotype file {geno_file}\")\n",
+    "        else:\n",
+    "            geno_file = f'{genotype_list:ad}/' + geno_file\n",
+    "    return path(geno_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "kernel": "SoS"
    },
    "outputs": [],
    "source": [
-    "[Expression_Filtering]\n",
-    "input: molecular_pheno,region_list\n",
-    "output: f'{wd:a}/cache/{_input:bn}.bed'\n",
+    "[Expression_Filtering,apex_cis_1]\n",
+    "input: molecular_pheno_whole,region_list\n",
+    "output: molecular_pheno = f'{wd}/data/{Prefix}.mol_phe.bed.gz'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container,volumes = [f'{wd:ad}:{genotype_list:ad}']\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
     "    library(\"modelr\")\n",
     "    library(\"purrr\")\n",
-    "    pheno = read_delim(\"$[molecular_pheno]\",delim = \"\\t\")\n",
-    "    region = read_delim(\"$[region_list]\",delim = \"\\t\")\n",
-    "    output = inner_join(pheno, region, by = \"gene_ID\")\n",
-    "    output%>%write_delim(\"$[_output[0]]\",delim = \"\\t\")\n",
-    "    "
+    "    pheno = read_delim(\"$[_input[0]]\",delim = \"\\t\")\n",
+    "    region = read_delim(\"$[_input[1]]\",delim = \"\\t\")\n",
+    "    output = inner_join(region, pheno , by = \"gene_ID\")\n",
+    "    output%>%write_delim(\"$[_output[0]:n]\",delim = \"\\t\")\n",
+    "  \n",
+    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
+    "    bgzip $[_output[0]:n] && tabix -p bed $[_output[0]]\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "[Factor_analysis,apex_cis_2]\n",
+    "input:  output_from('Expression_Filtering'), covariate\n",
+    "output: factor_covariate = f'{wd:a}/data/{Prefix}.cov.gz'\n",
+    "parameter: threads = 3\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container,volumes = [f'{wd:ad}:{genotype_list:ad}']\n",
+    "    apex factor  \\\n",
+    "    --out $[_output:nn] \\\n",
+    "    --threads $[threads] \\\n",
+    "    --iter $[iteration] \\\n",
+    "    --cov $[_input[1]] \\\n",
+    "    --factors $[n_of_factor] \\\n",
+    "    --bed $[_input[0]] \\\n",
+    "    --vcf $[place_holder_vcf]"
    ]
   },
   {
@@ -192,38 +260,150 @@
     "kernel": "SoS"
    },
    "source": [
-    "## Factor Analysis\n",
-    "This step infer hidden covariates and produce residuel expression for downstream analysis"
+    "## Partition of the molecular phenotype for each genes\n",
+    "This step extracts the molecular phenotype for each gene"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {
     "kernel": "SoS"
    },
    "outputs": [],
    "source": [
-    "[cis_qtl_1, Factor_Analysis]\n",
-    "output: f'{wd:a}/cache/factor/{_input:bn}.bed'\n",
+    "[Partition_1,apex_cis_3]\n",
+    "input: output_from('Expression_Filtering'), for_each = \"regions\"\n",
+    "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp.gz'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container,volumes = [f'{wd:ad}:{genotype_list:ad}']\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"modelr\")\n",
+    "    library(\"purrr\")\n",
+    "  \n",
+    "    # Get the line number for the region in the file\n",
+    "    line_num = system(\"awk '($$[region_name]==\\\"$[_regions[3]]\\\") {print NR}' $[_input]\", intern=T)\n",
+    "    if (length(line_num) == 0){\n",
+    "      stop( \"Cannot find $[_regions[3]] in column $[region_name]  $[_input]\")}\n",
+    "    yi <- data.table::fread(file = $[_input:r], skip = as.integer(line_num) - 1, nrows = 1)\n",
+    "    samplenames_yi <- data.table::fread(file = $[_input:r], skip = 0, nrows = 1)\n",
+    "    colnames(yi) <- colnames(samplenames_yi)\n",
+    "    readr::write_tsv(yi, path = \"$[_output[0]:n]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")\n",
+    "bash: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
+    "    bgzip $[_output[0]:n] && tabix -p bed $[_output[0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## Genotype Plink trio for each gene\n",
+    "Partition of the genotypes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "[Partition_2,apex_cis_4]\n",
+    "input: group_by = 1, group_with = 'regions'\n",
+    "output: f'{_input[0]:n}.bed',\n",
+    "        f'{_input[0]:n}.bim',\n",
+    "        f'{_input[0]:n}.fam'\n",
     "\n",
+    "# look up for genotype file\n",
+    "geno_file = get_genotype_file(_regions[3],genotype_list,geno_inventory)\n",
     "\n",
-    "# Parameter for running\n",
-    "parameter: thread = 3\n",
-    "\n",
-    "        \n",
+    "parameter: extract_snp = f'{geno_file:an}.bim'\n",
+    "parameter: exclude_snp = \"./.\"\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
-    "    cd $[wd]\n",
-    "    mkdir factor\n",
-    "    cd factor\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{genotype_list:ad}:{genotype_list:ad}']\n",
     "    ##### Get the locus genotypes for $[_regions[3]]\n",
-    "    Apex factor --vcf $[genotype:an] \\\n",
-    "    --bed $[_input] \\\n",
-    "    --cov $[cov] \\\n",
-    "    --out $[Prefix] \\\n",
-    "    --threads $[threads] \n",
-    "    "
+    "    plink --bfile $[geno_file:an] \\\n",
+    "    --make-bed \\\n",
+    "    --out $[_output[0]:n] \\\n",
+    "    --chr $[_regions[0]] \\\n",
+    "    --from-bp $[int(_regions[1]) - window ] \\\n",
+    "    --to-bp $[int(_regions[1]) + window ] \\\n",
+    "    --extract $[extract_snp] \\\n",
+    "    --exclude $[exclude_snp] \\\n",
+    "    --allow-no-sex || true \n",
+    "    \n",
+    "    \n",
+    "    touch $[_output]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## Convert the plink trio into VCF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "[Partition_3,apex_cis_5]\n",
+    "input: group_by = 1, group_with = 'regions'\n",
+    "output: f'{_input[0]:n}.vcf.gz'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{genotype_list:ad}:{genotype_list:ad}']\n",
+    "    plink --bfile $[_inpunt:an] \\\n",
+    "    --recode vcf-iid     \\\n",
+    "    --out $[_output[0]:n]\n",
+    "    bgzip $[_output[0]:n]\n",
+    "    tabix -p vcf $[_output[0]]\n",
+    "    tabix -H  $[_output[0]]\n",
+    "    touch $[_output]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## Null GRM Generation\n",
+    "This step generate a grm with 0 kinship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "[GRM_G]\n",
+    "input: molecular_pheno\n",
+    "output: f'{wd:n}/data/GRM_default.txt'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{genotype_list:ad}:{genotype_list:ad}']\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"modelr\")\n",
+    "    library(\"purrr\")\n",
+    "    mol_phe = read_delim(\"$[_input]\",delim = \"\\t\")\n",
+    "    grm = tibble(sample_1 = colnames(mol_phe)[5:ncol(mol_phe)])\n",
+    "    grm = grm%>%mutate(sample_2 = map(sample_1, ~grm$sample_1))%>%unnest(sample_2)%>%mutate(kinship = map2_dbl(sample_1,sample_2,~.x==.y))%>%select(`#id1` = sample_1, \"id2\" = sample_2,kinship )\n",
+    "    grm%>%write_delim(\"$[_output]\",delim = \"\\t\")"
    ]
   },
   {
@@ -244,22 +424,23 @@
    },
    "outputs": [],
    "source": [
-    "[cis_qtl_2,LMM]\n",
-    "output: f'{wd:a}/cache/lmm/{_input:bn}.bed'\n",
-    "parameter: window = '[100000]'\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
-    "    cd $[wd]/cache/\n",
-    "    mkdir lmm\n",
-    "    cd lmm\n",
-    "    Apex lmm --vcf $[genotype:an] \\\n",
-    "    --bed $[_input] \\\n",
-    "    --cov $[cov] \\\n",
-    "    --out $[Prefix] \\\n",
+    "[LMM,apex_cis_7]\n",
+    "input: output_from(['Partition_1','Partition_3','GRM_G'])\n",
+    "parameter: threads = 3\n",
+    "parameter: window = 100000\n",
+    "output: f'{_input[0]:n}.lmm_resid.bed.gz',\n",
+    "        f'{_input[0]:n}.theta.gz'\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{genotype_list:ad}:{genotype_list:ad}']\n",
+    "    apex lmm --vcf $[_input[1]] \\\n",
+    "    --bed $[_input[0]] \\\n",
+    "    --cov $[factor_covariate] \\\n",
+    "    --out $[_input[0]:n] \\\n",
     "    --threads $[threads] \\\n",
+    "    --grm $[_input[2]] \\\n",
     "    --fit-null \\\n",
     "    --save-resid \\\n",
     "    --write-gvar \\\n",
-    "    --window=$[window]\n",
+    "    --window $[window]\n",
     "    "
    ]
   },
@@ -281,25 +462,20 @@
    },
    "outputs": [],
    "source": [
-    "[cis_qtl_3,cis_sumstat]\n",
-    "input: ,for_each = \"chrm\"\n",
-    "output: f'{wd:a}/cache/sumstat/{_input:bn}.bed'\n",
-    "parameter: window = '[100000]'\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
-    "    cd $[wd]/cache/\n",
-    "    mkdir cis_sumstat\n",
-    "    cd cis_sumstat\n",
-    "    Apex cis --vcf $[genotype:an] \\\n",
-    "    --bed $[_input] \\\n",
-    "    --cov $[cov] \\\n",
-    "    --out $[Prefix] \\\n",
+    "[cis,apex_cis_8]\n",
+    "input: output_from(['Partition_1','Partition_3']),output_from(['LMM'])[1]\n",
+    "output: f'{wd:a}/cis/{Prefix}.{_regions[3]}.cis_gene_table.txt.gz',\n",
+    "        f'{wd:a}/cis/{Prefix}.{_regions[3]}.cis_sumstats.txt.gz',\n",
+    "        f'{wd:a}/cis/{Prefix}.{_regions[3]}.cis_long_table.txt.gz'\n",
+    "        \n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{genotype_list:ad}:{genotype_list:ad}']\n",
+    "    apex cis --vcf $[_input[1]] \\\n",
+    "    --bed $[_input[0]] \\\n",
+    "    --cov $[covariate] \\\n",
+    "    --out $[_output[0]:nnn] \\\n",
     "    --threads $[threads] \\\n",
-    "    --chr $[_chrm]\\\n",
-    "    --fit-null \\\n",
-    "    --save-resid \\\n",
-    "    --write-gvar \\\n",
-    "    --theta-file  $[_input]\\\n",
-    "    --window=$[window]"
+    "    --theta-file  $[_input[2]]\\\n",
+    "    --window $[window]"
    ]
   },
   {
