--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -309,6 +309,15 @@
     "kernel": "SoS"
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
    "source": [
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb plot_U \\\n",
     "        --model_data /home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed.rds \\\n",
