--- a/workflow/twas_fusion.ipynb
+++ b/workflow/twas_fusion.ipynb
@@ -551,7 +551,10 @@
     "kernel": "SoS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "test.chr4.mol_phe.lmm_resid.bed.gz\n",
+    "test.chr4.lmm_resid.bed.gz"
+   ]
   },
   {
    "cell_type": "markdown",
