--- a/workflow/uni_susie.ipynb
+++ b/workflow/uni_susie.ipynb
@@ -324,7 +324,7 @@
     "        f'{_input[0]:n}.fam'\n",
     "\n",
     "# look up for genotype file\n",
-    "geno_file = get_genotype_file(_regions[3],genotype_list,geno_inventory)\n",
+    "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
     "\n",
     "parameter: extract_snp = f'{geno_file:an}.bim'\n",
     "parameter: exclude_snp = \"./.\"\n",
@@ -340,9 +340,9 @@
     "    --from-bp $[int(_regions[1]) - window ] \\\n",
     "    --to-bp $[int(_regions[1]) + window ] \\\n",
     "    --keep $[keep_sample] \\\n",
-    "    --extract $[extract_snp]\n",
-    "    --exclude $[exclude_snp]\n",
-    "    --allow-no-sex || true\n",
+    "    --extract $[extract_snp] \\\n",
+    "    --exclude $[exclude_snp] \\\n",
+    "    --allow-no-sex || true \n",
     "    touch $[_output]"
    ]
   },
@@ -826,17 +826,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "kernel": "SoS"
    },
    "outputs": [],
    "source": [
     "#Saved selected susie object into one RData\n",
-    "[condense]\n",
     "input: group_by = \"all\"\n",
     "output:f'{wd:a}/susie/all_hsq.txt',\n",
     "       f'{wd:a}/susie.RData'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -864,33 +865,85 @@
    },
    "outputs": [],
    "source": [
+    "[susie_get_info]\n",
+    "input: molecular_pheno, for_each = \"regions\"\n",
+    "output: f'{wd:a}/extract/{_input:bn}.{_regions[3]}.extract.txt'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '80G', tags = f'{step_name}_{_output:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"modelr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
+    "    library(\"tidyr\")\n",
+    "    file = paste(c(\"$[wd:a]/susie/$[_input:bn].\",\"$[_regions[3]]\",\".susie.model.RData\"),collapse = \"\")\n",
+    "    data = tibble(file = file, gene_ID = \"$[_regions[3]]\" )\n",
+    "    data = data%>%mutate(model = map(file,~attach(.x)$full_model),\n",
+    "                        sets = map(model,~.x$sets),\n",
+    "                        cs = map(sets,~.x$cs),\n",
+    "                        n_cs = map_dbl(cs,~.x%>%length()),\n",
+    "                        `SNP` = map2(cs,model,~names(.y$X_column_scale_factors)[.x%>%unlist]),\n",
+    "                        )%>%select(file,`SNP`,n_cs)%>%filter(n_cs > 0)%>%unnest(SNP)\n",
+    "    data%>%write_delim(\"$[_output]\",delim = \"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "[susie_get_info_2]\n",
+    "output: f'{wd:a}/extract/{molecular_pheno:bn}.extract.txt'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '80G', tags = f'{step_name}_{_output:bn}'\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    head -1 $[_input[0]] > $[_output]\n",
+    "    cat $[\" \".join(_input):r] | grep :  >>  $[_output]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "#Create all_hsq for susie and saved all the susie object into one RData\n",
     "[susie_4]\n",
     "input: group_by = \"all\"\n",
-    "output:f'{wd:a}/susie/all_hsq.txt',\n",
-    "       f'{wd:a}/susie.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\"\n",
-    "  head -1 $[_input[0]] > $[_output[0]]\n",
-    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output[0]]\n",
+    "output: f'{wd:a}/susie.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '80G', tags = f'{step_name}_{_output:bn}'\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "      ls $[wd]/susie/*.rds > rds_list\n",
     "\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
+    "\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
     "    library(\"purrr\")\n",
     "    # Load a template\n",
-    "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
+    "    region = read_delim(\"$[wd]/rds_list\",delim =\".\",col_names = F)\n",
+    "    chrm = read_delim(\"$[region_list]\",delim = \"\\t\")\n",
+    "    ID = region[ncol(region)-2]\n",
+    "    colnames(ID) = \"gene_ID\"\n",
+    "    ID = inner_join(ID,chrm)\n",
     "    # get the path\n",
-    "    dir = \"$[_input[0]:d]/\"\n",
-    "    pre = \"$[_input[0]:bnnnnn]\"\n",
+    "    dir = \"$[wd:a]/susie/\"\n",
+    "    pre = \"$[molecular_pheno:bn]\"\n",
     "    sur = \".susie.model.RData\"\n",
-    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
+    "    region = ID%>%mutate(path = map(gene_ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
     "    # Load the data\n",
-    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
-    "                             model = map(env, ~.x$fitted1))\n",
+    "    output = region%>%mutate(env = map(path,~attach(.x)))\n",
     "    # Save the combined output\n",
-    "    save(output,file = \"$[_output[1]]\")"
+    "    save(output,file = \"$[_output]\")"
    ]
   },
   {
@@ -920,8 +973,8 @@
     "    # Load a template\n",
     "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
     "    # get the path\n",
-    "    dir = \"$[_input[0]:d]/\"\n",
-    "    pre = \"$[_input[0]:bnnnnn]\"\n",
+    "    dir = \"$[wd:a]/susie/\"\n",
+    "    pre = \"$[molecular_pheno:bn]\"\n",
     "    sur = \".susie.model.cv.RData\"\n",
     "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
     "    # Load the data\n",
